--- a/src/main/java/eu/doppel_helix/netbeans/mantisintegration/query/MantisQueryPanel.form
+++ b/src/main/java/eu/doppel_helix/netbeans/mantisintegration/query/MantisQueryPanel.form
@@ -755,7 +755,7 @@
 
               <Layout class="org.netbeans.modules.form.compat2.layouts.DesignFlowLayout"/>
               <SubComponents>
-                <Component class="org.netbeans.modules.bugtracking.util.LinkButton" name="deleteQueryLinkButton">
+                <Component class="org.jdesktop.swingx.JXHyperlink" name="deleteQueryLinkButton">
                   <Properties>
                     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                       <Border info="org.netbeans.modules.form.compat2.border.EmptyBorderInfo">
